<resources>
    <string name="app_name">BakingApp</string>
    <string name="title_recipe_detail">Recipe Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="Brownies">Brownies</string>
    <string name="NutellaPie">Nutella Pie</string>
</resources>
