<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="Steps"
        android:textAlignment="center"
        android:textSize="30sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_step_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </android.support.v7.widget.RecyclerView>


</LinearLayout>