<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/video_playerView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:resize_mode="fill"
        app:fastforward_increment="1000"
        app:rewind_increment="1000"
        />
    <ImageView
        android:id="@+id/iv_thumb"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"
        android:contentDescription="Thumbnail of Recipe Step" />

    <TextView
        android:id="@+id/tv_recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>